# recosm

./: Readme.md
post_proc/: .gitignore  Readme.md  plotting.py  post_proc.ipynb  processing.py  read_and_write.py  weights.py
simulations/all_muons/: Readme.md  run.mac  run.sh  water_cascades.txt
simulations/ge77_muons/: .gitignore  CMakeLists.txt  Readme.md  main.cc  run_optical.py
simulations/ge77_muons/include/: CosmogenicPhysics.hh  CustomStackingFilter.hh
simulations/ge77_muons/src/: CosmogenicPhysics.cc  CustomStackingFilter.cc
